--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.springframework</groupId>
-    <artifactId>SpringBootMySQL</artifactId>
+    <artifactId>SpringBootPeP</artifactId>
     <version>0.1.4-SNAPSHOT</version>
     
     <parent>
@@ -23,7 +23,22 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
 	</dependency>
-
+        <!-- Drools -->        
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-core</artifactId>
+            <version>7.0.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kie</groupId>
+            <artifactId>kie-spring</artifactId>
+            <version>7.0.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-compiler</artifactId>
+            <version>7.0.0.Final</version>
+        </dependency>
         <!-- JPA Data (We are going to use Repositories, Entities, Hibernate, etc...) -->
 
         <dependency>
@@ -71,7 +86,7 @@
         <dependency>
     		<groupId>javax.cache</groupId>
     		<artifactId>cache-api</artifactId>
-		</dependency>
+	</dependency>
         
         
         <!-- Use Derby InMemoryDb -->
@@ -101,7 +116,7 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
-    
+  <!--  
     <repositories>
         <repository>
           <id>nexus2release</id>
@@ -109,7 +124,8 @@
           <url>http://192.168.0.8:8081/nexus/content/repositories/releasesk</url>
         </repository>
     </repositories>
-    
+    -->
+    <!--
     <distributionManagement>
         <repository>
             <id>nexus2release</id>
@@ -120,6 +136,7 @@
             <url>http://192.168.0.8:8081/nexus/content/repositories/snapshots/</url>
         </snapshotRepository> 
     </distributionManagement>
+    -->
     <build>
         <plugins>
             <plugin>
@@ -134,6 +151,7 @@
                   <skip>true</skip>
                </configuration>
             </plugin>
+            <!--
             <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
@@ -153,6 +171,7 @@
                   <skipStaging>true</skipStaging>
                </configuration>
             </plugin>
+                        -->
         </plugins>
     </build>
 
